# warty

./: .gitignore  CONDUCT.license  CONTRIBUTING.license  Makefile  README.md  commonmark_to_moin.py  github_poke.py  hello.py  macaroon_unpack.py  moin_compare.py  moin_convert.py  moin_index.py  moin_pull.py  pyproject.toml  report_blank.py  report_jira_backlink_missing.mustache  report_jira_link.py  report_jira_link_exists.mustache  report_jira_link_missing.mustache  report_no_jira.mustache  report_no_jira.py  requirements.txt  requirements.txt.license  ticket_check.py  ticket_simple.py
static/: body.md  logo.png.license
wartlib/: dictionaries.py  environment.py  remote.py
working/commonmark/: postprocessing.sh
